envoy.yaml
static_resources:
  listeners:
  - name: egress_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 3128 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: egress_hcm
          route_config:
            name: egress_routes
            virtual_hosts:
            - name: allow_openai
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: openai
                  upgrade_configs:
                  - upgrade_type: CONNECT
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: openai
    connect_timeout: 5s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: openai
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api.openai.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: api.openai.com
layered_runtime:
  layers:
  - name: static_layer
    static_layer:
      envoy.reloadable_features.enable_connect_udp_support: false
